<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gbr_makanan"
        android:adjustViewBounds="true"
        android:contentDescription="@string/title_activity_detail"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/title_placeholder"
        android:layout_alignBottom="@id/gbr_makanan"
        android:padding="8dp"
        style="@style/TextAppearance.AppCompat.Headline"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newsTitle"
        android:layout_below="@id/gbr_makanan"
        android:text="@string/news_placeholder"
        android:padding="8dp"
        style="@style/TextAppearance.AppCompat.Subhead" />

</RelativeLayout>