<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context="com.example.projectpb.DetailActivity">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gbr_makananDetail"
            android:adjustViewBounds="true"
            android:contentDescription="@string/title_activity_detail"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleDetail"
            android:text="@string/title_placeholder"
            android:layout_alignBottom="@id/gbr_makananDetail"
            android:padding="16dp"
            style="@style/TextAppearance.AppCompat.Headline"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newsTitleDetail"
            android:layout_below="@id/gbr_makananDetail"
            android:text="@string/news_placeholder"
            android:padding="16dp"
            style="@style/TextAppearance.AppCompat.Subhead" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subTitleDetail"
            android:layout_below="@id/newsTitleDetail"
            android:text="@string/desc_resep"
            android:padding="16dp"
            style="@style/TextAppearance.AppCompat.Subhead" />
        </RelativeLayout>
</ScrollView>